bat.bool1.monkeytrouble.MonkeyTrouble.scala.error
Compilation error:
MonkeyTrouble:6: error: not found: value bsmile
  } else if (!aSmile & !bsmile) {
                        ^